--- a/MasterPage.master
+++ b/MasterPage.master
@@ -4,7 +4,7 @@
 <html lang="en">
 <html xmlns="http://www.w3.org/1999/xhtml">
 <head runat="server">
-    <title>game1 assignment</title>
+    <title>game1 assignment1234</title>
     <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
